--- a/_notebooks/2023-03-09-hacks-data-types.ipynb
+++ b/_notebooks/2023-03-09-hacks-data-types.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Type Hacks\n",
+    "# AP CSA FRQ 1 2021\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -33,11 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public int scoreGuess(String guess)\n",
@@ -68,11 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public String findBetterGuess(String guess1, String guess2)\n",
@@ -105,11 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class WordMatch {\n",
@@ -161,7 +150,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
