--- a/_notebooks/2023-03-26-sorts.ipynb
+++ b/_notebooks/2023-03-26-sorts.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Type Hacks\n",
+    "# Data Sorting\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
