add queue challenges

--- a/_notebooks/2023-03-27-generic-types.ipynb
+++ b/_notebooks/2023-03-27-generic-types.ipynb
@@ -423,6 +423,198 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.Iterator;\n",
+    "\n",
+    "/**\n",
+    " * Queue Iterator\n",
+    " *\n",
+    " * 1. \"has a\" current reference in Queue\n",
+    " * 2. supports iterable required methods for next that returns a generic T Object\n",
+    " */\n",
+    "class QueueIterator<T> implements Iterator<T> {\n",
+    "    LinkedList<T> current;  // current element in iteration\n",
+    "\n",
+    "    // QueueIterator is pointed to the head of the list for iteration\n",
+    "    public QueueIterator(LinkedList<T> head) {\n",
+    "        current = head;\n",
+    "    }\n",
+    "\n",
+    "    // hasNext informs if next element exists\n",
+    "    public boolean hasNext() {\n",
+    "        return current != null;\n",
+    "    }\n",
+    "\n",
+    "    // next returns data object and advances to next position in queue\n",
+    "    public T next() {\n",
+    "        T data = current.getData();\n",
+    "        current = current.getNext();\n",
+    "        return data;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "/**\n",
+    " * Queue: custom implementation\n",
+    " * @author     John Mortensen\n",
+    " *\n",
+    " * 1. Uses custom LinkedList of Generic type T\n",
+    " * 2. Implements Iterable\n",
+    " * 3. \"has a\" LinkedList for head and tail\n",
+    " */\n",
+    "public class Queue<T> implements Iterable<T> {\n",
+    "    LinkedList<T> head = null, tail = null;\n",
+    "\n",
+    "    /**\n",
+    "     *  Add a new object at the end of the Queue,\n",
+    "     *\n",
+    "     * @param  data,  is the data to be inserted in the Queue.\n",
+    "     */\n",
+    "    public void add(T data) {\n",
+    "        // add new object to end of Queue\n",
+    "        LinkedList<T> tail = new LinkedList<>(data, null);\n",
+    "\n",
+    "        if (this.head == null)  // initial condition\n",
+    "            this.head = this.tail = tail;\n",
+    "        else {  // nodes in queue\n",
+    "            this.tail.setNextNode(tail); // current tail points to new tail\n",
+    "            this.tail = tail;  // update tail\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     *  Returns the data of head.\n",
+    "     *\n",
+    "     * @return  data, the dequeued data\n",
+    "     */\n",
+    "    public T delete() {\n",
+    "        T data = this.peek();\n",
+    "        if (this.tail != null) { // initial condition\n",
+    "            this.head = this.head.getNext(); // current tail points to new tail\n",
+    "            if (this.head != null) {\n",
+    "                this.head.setPrevNode(tail);\n",
+    "            }\n",
+    "        }\n",
+    "        return data;\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     *  Returns the data of head.\n",
+    "     *\n",
+    "     * @return  this.head.getData(), the head data in Queue.\n",
+    "     */\n",
+    "    public T peek() {\n",
+    "        return this.head.getData();\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     *  Returns the head object.\n",
+    "     *\n",
+    "     * @return  this.head, the head object in Queue.\n",
+    "     */\n",
+    "    public LinkedList<T> getHead() {\n",
+    "        return this.head;\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     *  Returns the tail object.\n",
+    "     *\n",
+    "     * @return  this.tail, the last object in Queue\n",
+    "     */\n",
+    "    public LinkedList<T> getTail() {\n",
+    "        return this.tail;\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     *  Returns the iterator object.\n",
+    "     *\n",
+    "     * @return  this, instance of object\n",
+    "     */\n",
+    "    public Iterator<T> iterator() {\n",
+    "        return new QueueIterator<>(this.head);\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * Returns if queue is empty\n",
+    "     * \n",
+    "     * @return boolean if it is empty\n",
+    "     */\n",
+    "    public boolean isEmpty() {\n",
+    "      return this.head == null;\n",
+    "    }\n",
+    "    \n",
+    "    public String toString() {\n",
+    "      int count = 0;\n",
+    "      String str = \"\";\n",
+    "      for (T e : this) {\n",
+    "        str += e + \" \";\n",
+    "        count++;\n",
+    "      }\n",
+    "      return \"Words count: \" + count + \", data: \" + str;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Generics count: 4\n",
+      "My Generics data: 2021 2022 2018 2014 \n",
+      "My Generics count: 4\n",
+      "My Generics data: 2021 2022 2018 2014 2005 \n",
+      "My Generics count: 4\n",
+      "My Generics data: 2022 2018 2014 2005 \n"
+     ]
+    }
+   ],
+   "source": [
+    "/**\n",
+    " * Driver Class\n",
+    " * Tests queue with string, integers, and mixes of Classes and types\n",
+    " */\n",
+    "class QueueTester {\n",
+    "    public static void main(String[] args)\n",
+    "    {\n",
+    "\n",
+    "        // Create iterable Queue of NCS Generics\n",
+    "        Rate.setOrder(Rate.KeyType.year);\n",
+    "        \n",
+    "        // Illustrates use of a series of repeating arguments\n",
+    "        QueueManager qGenerics = new QueueManager(\"My Generics\", Rate.Ratings());\n",
+    "        qGenerics.printQueue();\n",
+    "        \n",
+    "        qGenerics.queue.add(new Rate(\"18\", \"2005\", \"Methods and Control Structures\", 5));\n",
+    "        \n",
+    "        qGenerics.printQueue();\n",
+    "        \n",
+    "        qGenerics.queue.delete();\n",
+    "        \n",
+    "        qGenerics.printQueue();\n",
+    "\n",
+    "\n",
+    "    }\n",
+    "}\n",
+    "QueueTester.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "vscode": {
@@ -484,8 +676,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge #1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -496,12 +696,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 2005 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2022 2018 2014 2005 \n"
+      "Enqueued data: seven\n",
+      "Words count: 1, data: seven \n",
+      "Enqueued data: slimy\n",
+      "Words count: 2, data: seven slimy \n",
+      "Enqueued data: snakes\n",
+      "Words count: 3, data: seven slimy snakes \n",
+      "Enqueued data: sallying\n",
+      "Words count: 4, data: seven slimy snakes sallying \n",
+      "Enqueued data: slowly\n",
+      "Words count: 5, data: seven slimy snakes sallying slowly \n",
+      "Enqueued data: slithered\n",
+      "Words count: 6, data: seven slimy snakes sallying slowly slithered \n",
+      "Enqueued data: southward\n",
+      "Words count: 7, data: seven slimy snakes sallying slowly slithered southward \n",
+      "Dequeued data: seven\n",
+      "Words count: 6, data: slimy snakes sallying slowly slithered southward \n",
+      "Dequeued data: slimy\n",
+      "Words count: 5, data: snakes sallying slowly slithered southward \n",
+      "Dequeued data: snakes\n",
+      "Words count: 4, data: sallying slowly slithered southward \n",
+      "Dequeued data: sallying\n",
+      "Words count: 3, data: slowly slithered southward \n",
+      "Dequeued data: slowly\n",
+      "Words count: 2, data: slithered southward \n",
+      "Dequeued data: slithered\n",
+      "Words count: 1, data: southward \n",
+      "Dequeued data: southward\n",
+      "Words count: 0, data: \n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "/**\n",
+    " * Driver Class\n",
+    " * Tests queue with string, integers, and mixes of Classes and types\n",
+    " */\n",
+    "class QueueTester1 {\n",
+    "    public static void main(String[] args)\n",
+    "    {\n",
+    "        // Create iterable Queue of Words\n",
+    "        String[] words = new String[] { \"seven\", \"slimy\", \"snakes\", \"sallying\", \"slowly\", \"slithered\", \"southward\"};\n",
+    "        Queue<String> queue = new Queue<>();\n",
+    "\n",
+    "        // Enqueuing all words \n",
+    "        for (String word: words){\n",
+    "            queue.add(word);\n",
+    "            System.out.println(\"Enqueued data: \"+ word);\n",
+    "            System.out.println(queue);\n",
+    "        }\n",
+    "\n",
+    "        // Dequeuing all words \n",
+    "        while (!(queue.isEmpty())){\n",
+    "            String del = queue.delete();\n",
+    "            System.out.println(\"Dequeued data: \" + del);\n",
+    "            System.out.println(queue);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "QueueTester1.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st Queue\n",
+      "Words count: 4, data: 1 4 5 8 \n",
+      "2nd Queue\n",
+      "Words count: 4, data: 2 3 6 7 \n",
+      "New Queue\n",
+      "Words count: 8, data: 1 2 3 4 5 6 7 8 \n"
      ]
     }
    ],
@@ -510,29 +793,224 @@
     " * Driver Class\n",
     " * Tests queue with string, integers, and mixes of Classes and types\n",
     " */\n",
-    "class QueueTester {\n",
+    "class QueueTester2{\n",
     "    public static void main(String[] args)\n",
     "    {\n",
+    "        // initializing two queues of ints\n",
+    "        int[] set1 = {1, 4, 5, 8};\n",
+    "        int[] set2 = {2, 3, 6, 7};\n",
     "\n",
-    "        // Create iterable Queue of NCS Generics\n",
-    "        Rate.setOrder(Rate.KeyType.year);\n",
-    "        \n",
-    "        // Illustrates use of a series of repeating arguments\n",
-    "        QueueManager qGenerics = new QueueManager(\"My Generics\", Rate.Ratings());\n",
-    "        qGenerics.printQueue();\n",
-    "        \n",
-    "        qGenerics.queue.add(new Rate(\"18\", \"2005\", \"Methods and Control Structures\", 5));\n",
-    "        \n",
-    "        qGenerics.printQueue();\n",
-    "        \n",
-    "        qGenerics.queue.delete();\n",
-    "        \n",
-    "        qGenerics.printQueue();\n",
+    "        Queue<Integer> Q1 = new Queue<>();\n",
+    "        for (int n: set1){\n",
+    "            Q1.add(n);\n",
+    "        }\n",
+    "        Queue<Integer> Q2 = new Queue<>();\n",
+    "        for (int n: set2){\n",
+    "            Q2.add(n);\n",
+    "        }\n",
     "\n",
+    "        // printing queues individually \n",
+    "        System.out.println(\"1st Queue\");\n",
+    "        System.out.println(Q1);\n",
+    "        System.out.println(\"2nd Queue\");\n",
+    "        System.out.println(Q2);\n",
     "\n",
+    "        //initializing new queue for queues to order into one another\n",
+    "        Queue<Integer> Q3 = new Queue<>();\n",
+    "        while (!(Q1.isEmpty()) || !(Q2.isEmpty())){\n",
+    "            // checking if first queue is empty\n",
+    "            if (Q1.isEmpty()){\n",
+    "                Q3.add(Q2.delete());\n",
+    "            }\n",
+    "            //checking if second queue is empty\n",
+    "            else if(Q2.isEmpty()){\n",
+    "                Q3.add(Q1.delete());\n",
+    "            }\n",
+    "            // checking if the first Q1 val is greater than the first Q2 val\n",
+    "            else if (Q1.peek() < Q2.peek()){\n",
+    "                Q3.add(Q1.delete());\n",
+    "            }\n",
+    "            else {\n",
+    "                Q3.add(Q2.delete());\n",
+    "\n",
+    "            }\n",
+    "        }\n",
+    "        // printing new queue\n",
+    "        System.out.println(\"New Queue\");\n",
+    "        System.out.println(Q3);\n",
     "    }\n",
     "}\n",
-    "QueueTester.main(null);"
+    "QueueTester2.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge #3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class ShuffleQ<T> {\n",
+    "    public void shuffle(Queue<T> q) {\n",
+    "        //initializing a new queue\n",
+    "        List<T> newQ = new ArrayList<>();\n",
+    "  \n",
+    "        // Add all elements to newQ   \n",
+    "        while (!q.isEmpty()) {\n",
+    "          newQ.add(q.delete());\n",
+    "        }\n",
+    "  \n",
+    "        // Add elements back to q in random order\n",
+    "        while (!newQ.isEmpty()) {\n",
+    "          // Get random index\n",
+    "          int rand = (int) (Math.random() * newQ.size());\n",
+    "          q.add(newQ.get(rand));\n",
+    "          // Remove element from the new queue\n",
+    "          newQ.remove(rand);\n",
+    "        }\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  /**\n",
+    "   * Driver Class\n",
+    "   * Tests queue with string, integers, and mixes of Classes and types\n",
+    "   */\n",
+    "  \n",
+    "  class QueueTester3 {\n",
+    "      public static void main(String[] args)\n",
+    "      {\n",
+    "        \n",
+    "        // Create first queue\n",
+    "        int[] set = {1, 2, 3, 4, 5, 6, 7, 8};\n",
+    "        Queue<Integer> Q = new Queue<>();\n",
+    "        for (int n : set) {\n",
+    "          Q.add(n);\n",
+    "        }\n",
+    "        System.out.println(\"Sorted Queue: \");\n",
+    "        System.out.println(Q);\n",
+    "        System.out.println();\n",
+    "  \n",
+    "        // Shuffle queue using shuffleQ\n",
+    "    \n",
+    "        ShuffleQ<Integer> shuffleQ = new ShuffleQ<>();\n",
+    "        shuffleQ.shuffle(Q);\n",
+    "        \n",
+    "        System.out.println(\"Shuffled Queue: \");\n",
+    "        System.out.println(Q);\n",
+    "    \n",
+    "      }\n",
+    "    }\n",
+    "    QueueTester3.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Challenge #4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Stack<T>{\n",
+    "    LinkedList<T> top = null;\n",
+    "    public Stack(){\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public void push(T data){\n",
+    "        top = new LinkedList<T>(data, top);\n",
+    "    }\n",
+    "\n",
+    "    public T pop(){\n",
+    "        T val = top.getData();\n",
+    "        top = top.getPrevious();\n",
+    "        return val;\n",
+    "    }\n",
+    "\n",
+    "    public T peek(){\n",
+    "        return top.getData();\n",
+    "    }\n",
+    "\n",
+    "    public String toString(){\n",
+    "        LinkedList<T> current = top;\n",
+    "        String result = \"(Head) -> \";\n",
+    "        if (current == null){\n",
+    "            result += \"Null + ->\";\n",
+    "        }\n",
+    "        while(current !=null){\n",
+    "            result += current.getData() + \" -> \";\n",
+    "            current = current.getPrevious();\n",
+    "        }\n",
+    "        result += \"nil\";\n",
+    "        return result;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 8 -> \n",
+      "Stack: \n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class QueueTester4 {\n",
+    "    public static void main(String[] args)\n",
+    "    {\n",
+    "      Stack stack = new Stack();\n",
+    "      // Create first q\n",
+    "      int[] set = {1, 2, 3, 4, 5, 6, 7, 8};\n",
+    "      for (int n: set){\n",
+    "        System.out.print(n + \" -> \");\n",
+    "      }\n",
+    "      System.out.println();\n",
+    "\n",
+    "      for (int n: set){\n",
+    "        stack.push(n);\n",
+    "      }\n",
+    "\n",
+    "        System.out.println(\"Stack: \");\n",
+    "        System.out.println(stack);\n",
+    "\n",
+    "        \n",
+    "  \n",
+    "    }\n",
+    "  }\n",
+    "  QueueTester4.main(null);"
    ]
   }
  ],
