--- a/_notebooks/2023-03-27-generic-types.ipynb
+++ b/_notebooks/2023-03-27-generic-types.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -91,14 +91,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class [LREPL.$JShell$14$Rate; 4\n",
+      "class [LREPL.$JShell$20$Rate; 4\n",
       "Generic: Rate listed by title\n",
       "Rate: 9, 2021, Array List, 9\n",
       "Rate: 12, 2022, Methods and Control Structures, 8\n",
       "Rate: 3, 2018, Classes, 4\n",
       "Rate: 7, 2014, 2D Arrays, 6\n",
       "\n",
-      "class [LREPL.$JShell$14$Rate; 4\n",
+      "class [LREPL.$JShell$20$Rate; 4\n",
       "Generic: Rate listed by type\n",
       "Array List\n",
       "Methods and Control Structures\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -563,26 +563,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 2005 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2022 2018 2014 2005 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "/**\n",
     " * Driver Class\n",
@@ -615,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -685,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -768,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -859,7 +846,19 @@
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted Queue: \n",
+      "Words count: 8, data: 1 2 3 4 5 6 7 8 \n",
+      "\n",
+      "Shuffled Queue: \n",
+      "Words count: 8, data: 4 6 1 5 7 2 8 3 \n"
+     ]
+    }
+   ],
    "source": [
     "class ShuffleQ<T> {\n",
     "    public void shuffle(Queue<T> q) {\n",
@@ -924,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -970,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
