make good output

--- a/_notebooks/2023-03-27-generic-types.ipynb
+++ b/_notebooks/2023-03-27-generic-types.ipynb
@@ -15,12 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "/* This is wrapper class...\n",
@@ -80,25 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class [LREPL.$JShell$14$Rate; 4\n",
+      "class [LREPL.$JShell$20$Rate; 4\n",
       "Generic: Rate listed by title\n",
       "Rate: 9, 2021, Array List, 9\n",
       "Rate: 12, 2022, Methods and Control Structures, 8\n",
       "Rate: 3, 2018, Classes, 4\n",
       "Rate: 7, 2014, 2D Arrays, 6\n",
       "\n",
-      "class [LREPL.$JShell$14$Rate; 4\n",
+      "class [LREPL.$JShell$20$Rate; 4\n",
       "Generic: Rate listed by type\n",
       "Array List\n",
       "Methods and Control Structures\n",
@@ -193,12 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "/**\n",
@@ -302,12 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.util.Iterator;\n",
@@ -423,12 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.util.Iterator;\n",
@@ -563,26 +543,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2021 2022 2018 2014 2005 \n",
-      "My Generics count: 4\n",
-      "My Generics data: 2022 2018 2014 2005 \n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "/**\n",
     " * Driver Class\n",
@@ -615,12 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "/**\n",
@@ -685,12 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -768,12 +723,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -854,12 +805,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted Queue: \n",
+      "Words count: 8, data: 1 2 3 4 5 6 7 8 \n",
+      "\n",
+      "Shuffled Queue: \n",
+      "Words count: 8, data: 4 6 1 5 7 2 8 3 \n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "class ShuffleQ<T> {\n",
     "    public void shuffle(Queue<T> q) {\n",
@@ -924,12 +883,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Stack<T>{\n",
@@ -970,12 +925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1024,7 +975,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
