final fix hopefully

--- a/_notebooks/2023-03-28-extra-credit.ipynb
+++ b/_notebooks/2023-03-28-extra-credit.ipynb
@@ -5,13 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "# Extra Credit CSUSM\n",
+    "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- title: Extra Credit CSUSM\n",
-    "---"
+    "- title: Extra Credit CSUSM"
    ]
   },
   {
