big update to sorts. added avg time stuff

--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 121,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 34 35 53 57 61 92 "
+      "2 34 35 53 57 61 92 \n",
+      "\n",
+      "Time taken for one run: 2100 nanoseconds\n",
+      "\n",
+      "Average time taken for 5000 runs: 1442 nanoseconds\n"
      ]
     }
    ],
@@ -64,15 +64,50 @@
     "        int[] arr = {34, 57, 35, 92, 2, 61, 53};\n",
     "        // sort the array using the bubbleSort function\n",
     "        bubbleSort(arr);\n",
+    "\n",
+    "        long startTime = System.nanoTime();\n",
+    "        bubbleSort(arr);\n",
+    "        long endTime = System.nanoTime();\n",
+    "        long duration = (endTime - startTime);\n",
+    "        \n",
+    "        long totalTime = 0;\n",
+    "        for (int i = 0; i < 5000; i++) {\n",
+    "            int[] arrCopy = arr.clone();\n",
+    "            long startTime2 = System.nanoTime();\n",
+    "            bubbleSort(arrCopy);\n",
+    "            long endTime2 = System.nanoTime();\n",
+    "            totalTime += (endTime2 - startTime2);\n",
+    "        }\n",
+    "        long avgTime = totalTime / 5000;\n",
+    "\n",
+    "        \n",
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
     "            System.out.print(arr[i] + \" \");\n",
     "        }\n",
+    "\n",
+    "        System.out.println(\"\");\n",
+    "\n",
+    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        \n",
+    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
     "BubbleSort.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bubble Sort Analysis\n",
+    "- sort compares left element to right element\n",
+    "- if element is greater than the right then it will swap\n",
+    "- continues cycling through elements until no more swaps happen\n",
+    "- the complexity of bubble sort is O(n^2) which is relatively not that efficient"
    ]
   },
   {
@@ -85,19 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 113,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 10 11 12 46 90 134 "
+      "2 10 11 12 46 90 134 \n",
+      "\n",
+      "Time taken for one run: 6800 nanoseconds\n",
+      "\n",
+      "Average time taken for 5000 runs: 2841 nanoseconds\n"
      ]
     }
    ],
@@ -127,15 +162,48 @@
     "        int[] arr = {46,134, 10, 12, 2, 11, 90};\n",
     "        // sort the array using the selectionSort function\n",
     "        selectionSort(arr);\n",
+    "\n",
+    "        long startTime = System.nanoTime();\n",
+    "        selectionSort(arr);\n",
+    "        long endTime = System.nanoTime();\n",
+    "        long duration = (endTime - startTime);\n",
+    "\n",
+    "        long totalTime = 0;\n",
+    "        for (int i = 0; i < 5000; i++) {\n",
+    "            int[] arrCopy = arr.clone();\n",
+    "            long startTime2 = System.nanoTime();\n",
+    "            selectionSort(arrCopy);\n",
+    "            long endTime2 = System.nanoTime();\n",
+    "            totalTime += (endTime2 - startTime2);\n",
+    "        }\n",
+    "        long avgTime = totalTime / 5000;\n",
+    "        \n",
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
     "            System.out.print(arr[i] + \" \");\n",
     "        }\n",
+    "\n",
+    "        System.out.println(\"\");\n",
+    "\n",
+    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        \n",
+    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
     "SelectionSort.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Selection Sort Analysis\n",
+    "- will take the first number and find the lowest value in the entire array and swap with that number\n",
+    "- then it will take the next number in line and swap with the next lowest value\n",
+    "- time complexity of selection sort is also O(n^2) but a little bit better than bubble sort"
    ]
   },
   {
@@ -148,19 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 114,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "5 13 30 65 82 304 640 "
+      "5 13 30 65 82 304 640 \n",
+      "\n",
+      "Time taken for one run: 3600 nanoseconds\n",
+      "\n",
+      "Average time taken for 5000 runs: 4185 nanoseconds\n"
      ]
     }
    ],
@@ -187,15 +255,49 @@
     "        int[] arr = {640, 304, 65, 82, 5, 13, 30};\n",
     "        // sort the array using the insertionSort function\n",
     "        insertionSort(arr);\n",
+    "\n",
+    "        long startTime = System.nanoTime();\n",
+    "        insertionSort(arr);\n",
+    "        long endTime = System.nanoTime();\n",
+    "        long duration = (endTime - startTime);\n",
+    "\n",
+    "        long totalTime = 0;\n",
+    "        for (int i = 0; i < 5000; i++) {\n",
+    "            int[] arrCopy = arr.clone();\n",
+    "            long startTime2 = System.nanoTime();\n",
+    "            insertionSort(arrCopy);\n",
+    "            long endTime2 = System.nanoTime();\n",
+    "            totalTime += (endTime2 - startTime2);\n",
+    "        }\n",
+    "        long avgTime = totalTime / 5000;\n",
+    "        \n",
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
     "            System.out.print(arr[i] + \" \");\n",
     "        }\n",
+    "        \n",
+    "        System.out.println(\"\");\n",
+    "\n",
+    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        \n",
+    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
     "InsertionSort.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insertion Sort\n",
+    "- starts with second element\n",
+    "- compares element with left and if smaller then swaps and if not stays\n",
+    "- then takes next element and if smaller than first element, but bigger than the next, it will insert itself between the two elements\n",
+    "- once again has a O(n^2) complexity but it is still faster than the bubble and selection sorts because there isn't as many swaps and comparisons"
    ]
   },
   {
@@ -208,19 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 119,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "123 132 164 234 323 725 905 "
+      "123 132 164 234 323 725 905 \n",
+      "\n",
+      "Time taken for one run: 12800 nanoseconds\n",
+      "\n",
+      "Average time taken for 5000 runs: 5287 nanoseconds\n"
      ]
     }
    ],
@@ -293,15 +395,45 @@
     "        // sort the array using the mergeSort function\n",
     "        mergeSort(arr, 0, n - 1);\n",
     "\n",
+    "        long startTime = System.nanoTime();\n",
+    "        mergeSort(arr, 0, n - 1);\n",
+    "        long endTime = System.nanoTime();\n",
+    "        long duration = (endTime - startTime);\n",
+    "\n",
     "        // print out the sorted array\n",
     "        System.out.println(\"Sorted array:\");\n",
     "        for (int i = 0; i < n; ++i) {\n",
     "            System.out.print(arr[i] + \" \");\n",
     "        }\n",
+    "        \n",
+    "        System.out.println(\"\");\n",
+    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "\n",
+    "        // measure the time it takes to sort the array using the mergeSort function 5000 times\n",
+    "        long totalDuration = 0;\n",
+    "        for (int i = 0; i < 5000; i++) {\n",
+    "            long startTime2 = System.nanoTime();\n",
+    "            mergeSort(arr, 0, n - 1);\n",
+    "            long endTime2 = System.nanoTime();\n",
+    "            totalDuration += (endTime2 - startTime2);\n",
+    "        }\n",
+    "\n",
+    "        // calculate the average time it takes to sort the array and print it out\n",
+    "        long avgDuration = totalDuration / 5000;\n",
+    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgDuration + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
     "MergeSort.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge Sort Analysis\n",
+    "- divides array in two halves"
    ]
   }
  ],
@@ -315,7 +447,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
