add kastmerge analysis

--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -33,9 +33,9 @@
       "Sorted array:\n",
       "2 34 35 53 57 61 92 \n",
       "\n",
-      "Time taken for one run: 2100 nanoseconds\n",
+      "Time taken for one run: 2800 nanoseconds\n",
       "\n",
-      "Average time taken for 5000 runs: 1442 nanoseconds\n"
+      "Average time taken for 5000 runs: 1599 nanoseconds\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bubble Sort Analysis\n",
+    "## Bubble Sort Analysis\n",
     "- sort compares left element to right element\n",
     "- if element is greater than the right then it will swap\n",
     "- continues cycling through elements until no more swaps happen\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +130,9 @@
       "Sorted array:\n",
       "2 10 11 12 46 90 134 \n",
       "\n",
-      "Time taken for one run: 6800 nanoseconds\n",
+      "Time taken for one run: 2900 nanoseconds\n",
       "\n",
-      "Average time taken for 5000 runs: 2841 nanoseconds\n"
+      "Average time taken for 5000 runs: 1566 nanoseconds\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selection Sort Analysis\n",
+    "## Selection Sort Analysis\n",
     "- will take the first number and find the lowest value in the entire array and swap with that number\n",
     "- then it will take the next number in line and swap with the next lowest value\n",
     "- time complexity of selection sort is also O(n^2) but a little bit better than bubble sort"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -226,9 +226,9 @@
       "Sorted array:\n",
       "5 13 30 65 82 304 640 \n",
       "\n",
-      "Time taken for one run: 3600 nanoseconds\n",
+      "Time taken for one run: 2200 nanoseconds\n",
       "\n",
-      "Average time taken for 5000 runs: 4185 nanoseconds\n"
+      "Average time taken for 5000 runs: 1990 nanoseconds\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Insertion Sort\n",
+    "## Insertion Sort\n",
     "- starts with second element\n",
     "- compares element with left and if smaller then swaps and if not stays\n",
     "- then takes next element and if smaller than first element, but bigger than the next, it will insert itself between the two elements\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
       "\n",
       "Time taken for one run: 12800 nanoseconds\n",
       "\n",
-      "Average time taken for 5000 runs: 5287 nanoseconds\n"
+      "Average time taken for 5000 runs: 6057 nanoseconds\n"
      ]
     }
    ],
@@ -432,8 +432,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merge Sort Analysis\n",
-    "- divides array in two halves"
+    "## Merge Sort Analysis\n",
+    "- divides array in two halves\n",
+    "- then divides again until only one element\n",
+    "- compares the elements and merges them into order\n",
+    "- then merges others elements all together\n",
+    "- fastest of these with a time complexity of O(n log(n)) which is much more efficient than the other sorts"
    ]
   }
  ],
